--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,38 @@
   <title>React App</title>
 </head>
 
+
 <body>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <a class="navbar-item image" href="#"><img src="images/logo-for-book-project.png" class=" is-square"></a>
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="#root">Home</a>
+        <div class="navbar-item">
+          <button class="button">Filters</button>
+        </div>
+      </div>
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-primary">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button is-light">
+              Log in
+            </a>
+          </div>
+        </div>
+      </div>
+
+  </nav>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
