--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,26 +29,36 @@
 
 
 <body>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
+
+  <nav class="navbar has-background-black is-fixed-top" role="navigation" aria-label="main navigation">
     <a class="navbar-item image" href="#"><img src="images/logo-for-book-project.png" class=" is-square"></a>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
     </div>
 
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="navbarBasicExample" class="navbar-menu is-spaced">
       <div class="navbar-start">
-        <a class="navbar-item" href="#root">Home</a>
+        <a class="navbar-item has-text-white" href="#root">Home</a>
         <div class="navbar-item">
           <button class="button">Filters</button>
         </div>
       </div>
-      <div class="navbar-end">
+
+      <!-- search bar -->
+
+      <div class="navbar-end has-addons mt-2">
+        <input id="searchbar" class="control input navbar-item" type="text" placeholder="search" onkeyup="sort_books()">
+        <button class="control button is-info">Search</button>
+      </div>
+
+      <div class="navbar-end ml-0">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary">
+            <a class="button is-primary ">
               <strong>Sign up</strong>
             </a>
             <a class="button is-light">
